--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
+    "@xmpp/client": "^0.12.0",
     "autobind": "^1.0.3",
     "expo": "~40.0.0",
     "expo-splash-screen": "~0.8.0",
